# Cube.js-MCP-server

./: .env.example  README.md  config.json  pyproject.toml  requirements.txt  server.py
cubejs_mcp/: __init__.py  server.py
