[project.scripts]
cubejs-mcp = "cubejs_mcp.server:main"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubejs-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Cube.js analytics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "zsembek", email = "zsembek@example.com"}
]
keywords = ["mcp", "cube.js", "analytics", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/zsembek/Cube.js-MCP-server"
Repository = "https://github.com/zsembek/Cube.js-MCP-server.git"
Documentation = "https://github.com/zsembek/Cube.js-MCP-server#readme"
Issues = "https://github.com/zsembek/Cube.js-MCP-server/issues"

[tool.setuptools]
packages = ["cubejs_mcp"]

[tool.setuptools.package-data]
cubejs_mcp = ["py.typed"]

[project.scripts]
cubejs-mcp = "cubejs_mcp.server:main"
